# imap-codec-model

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
imap_codec_model/: __init__.py  auth.py  body.py  capability.py  code.py  command.py  core.py  enable.py  envelope.py  fetch.py  flag.py  metadata.py  response.py  sort.py  thread.py  uidplus.py  utils.py  validate.py
imap_codec_model/extensions/: compress.py  enable.py  idle.py  metadata.py  quota.py  sort.py  thread.py  uidplus.py
imap_codec_model/models/: __init__.py  auth.py  binary.py  command.py  core.py  enable.py  fetch.py  flag.py  greeting.py  mailbox.py  response.py  search.py  sequence.py  status.py
imap_codec_model/models/extensions/: enable.py  metadata.py  quota.py  sort.py  thread.py  uidplus.py
imap_codec_model/response/: __init__.py  ccr.py  data.py  status.py
tests/: runable_test.py  test_greeting.py  test_utils.py  test_validate.py
